--- a/hex.html
+++ b/hex.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>color flipper</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+</head>
+<body>
     <nav>
       <dv class="flipper">My color flipper project</dv>
       <ul class="navlink" id="navbar">
@@ -23,6 +23,7 @@
         <button class="btn" id="btn">Click here</button>
       </div>
     </main>
-    <script src="inter.js"></script>
+    <script src="hex.js"></script>
   </body>
+</body>
 </html>
